Utilize gang scheduling alongside service names to make magic happen
Signed-off-by: Clif Houck <me@clifhouck.com>